<resources>
    <string name="state_connect_card_reader">Connecter le lecteur de carte</string>
    <string name="state_grant_usb_device">Autoriser l’utilisation de l’outil USB</string>
    <string name="state_grant_refused">Demande d’autorisation refusée</string>
    <string name="state_insert_driver_card">Insérer la carte conducteur dans le lecteur</string>
    <string name="state_reading">Lecture de carte en cours</string>
    <string name="state_use_driver_card">La carte inséré est incompatible !! Veuillez la retirer</string>
    <string name="state_remove_driver_card">Retirer la carte du lecteur!</string>
    <string name="loader_title">Chargement</string>
    <string name="loader_message">Veuillez patienter…</string>
    <string name="lecture_termine">Lecture Terminée</string>
    <string name="d_tection_d_une_nouvelle_carte">Détection d\'une nouvelle carte</string>
    <string name="card_no_detected">nous avons détecté que vous avez insérer une nouvelle carte dont le numéro de carte ne correspond pas</string>
    <string name="arr_ter_la_lecture">arrêter la lecture</string>
    <string name="continuer_la_lecture">continuer la lecture</string>
    <string name="Precondition_Required_no_associated_driver">Condition préalable requise: conducteur non associé</string>
    <string name="app_name">SPI</string>
    <string name="com_auth0_lock_action_log_in">S’identifier</string>
    <string name="entrer_votre_Email">Entrer votre mail</string>
    <string name="format_email_incorrecte">Email incorrect</string>
    <string name="entrer_votre_mot_de_passe">Entrer votre mot de passe</string>
    <string name="email_ou_mot_de_passe_incorrect">Email ou de mot de passe incorrect</string>
    <string name="appwidget_text">Strada Mobile</string>
    <string name="appwidget_text_start_pointage">Pointage %s en cours</string>
    <string name="appwidget_text_end_pointage">Pointage arrêté</string>
    <string name="Lundi">L</string>
    <string name="Mardi">M</string>
    <string name="Mercredi">M</string>
    <string name="Jeudi">J</string>
    <string name="Vendredi">V</string>
    <string name="Samedi">S</string>
    <string name="Dimanche">D</string>
    <string name="_24">24</string>
    <string name="avr">AVR</string>
    <string name="cumul_journ_e">Cumul journée</string>
    <string name="_8_00">8:00</string>
    <string name="_00_00">00:00</string>
    <string name="demande_d_absence">Demande d\'absence</string>
    <string name="votre_demande_d_absence_pour_le_15_04_2020_a_t">Votre demande d\'absence pour le 15/04/2020 a été</string>
    <string name="il_y_a_2_min">Il y a 2 min</string>
    <string name="accueil">Accueil</string>
    <string name="pointeuse">Pointeuse</string>
    <string name="mes_activit_s">Mes Activités</string>
    <string name="menu_card_reader">Lecteur de carte</string>
    <string name="mon_administratif">Mon Administratif</string>
    <string name="notifications">Notifications</string>
    <string name="messagerie">Messagerie</string>
    <string name="profil">Profil</string>
    <string name="a_propos">A propos</string>
    <string name="miguel_albert">Miguel Albert</string>
    <string name="lundi_13_avril_2020">Lundi, 13 Avril 2020</string>
    <string name="mes_notifications">Mes Notifications</string>
    <string name="voir_tous">Voir tous</string>
    <string name="_19_janvier_2029">19 Janvier 2029</string>
    <string name="service">Service</string>
    <string name="nuit">Nuit</string>
    <string name="mes_prochaines_absences">Mes Prochaines Absences</string>
    <string name="type_d_absence">Type d\'absence :</string>
    <string name="choisir_votre_type_d_absence">Choisir votre type d\'absence</string>
    <string name="date_de_d_but">Date de début :</string>
    <string name="date_de_fin">Date de fin :</string>
    <string name="dur_e">Durée</string>
    <string name="duree">Durée</string>
    <string name="votre_commentaire">Votre commentaire :</string>
    <string name="ecrivez_votre_commentaire_ici">Ecrivez votre commentaire ici</string>
    <string name="votre_demande_d_absence_est_maintenant_en_attente">Votre demande d\'absence est maintenant en attente</string>
    <string name="ok">Ok</string>
    <string name="annuler">Annuler</string>
    <string name="terminer">Terminer</string>
    <string name="votre_demande_est_en_cours_de_traitement">Votre demande est en cours de traitement</string>
    <string name="heure_d_but">Heure début</string>
    <string name="heure_fin">Heure fin</string>
    <string name="heure_de_fin">Heure de fin</string>
    <string name="publi_par">Publié par</string>
    <string name="m_albertoo">- M Albertoo</string>
    <string name="il_y_a_2_jours">il y a 2 jours</string>
    <string name="_24_mars_2020">24 Mars 2020</string>
    <string name="_5_46">5:46</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="pas_de_commentaires_pour_le_moment">Pas de commentaires pour le moment</string>
    <string name="tous_les_commentaires_apparaissent_ici">Tous les commentaires apparaissent ici</string>
    <string name="_2_jours">2 Jours</string>
    <string name="demande_d_absence_valid_e">Demande d\'absence validée</string>
    <string name="du_15_04_2020">Du 15/04/2020</string>
    <string name="_17_04_2020">17/04/2020</string>
    <string name="solde_absence">Solde d\'absence</string>
    <string name="demande_d_absence_en_cours">Demande d\'absence en cours</string>
    <string name="cp">CP</string>
    <string name="rc">RC</string>
    <string name="r">R</string>
    <string name="rcr">RCR</string>
    <string name="votre_solde_est">Votre solde est : 4.00</string>
    <string name="acquis">Acquis</string>
    <string name="pris">Pris</string>
    <string name="en_attente">En attente</string>
    <string name="jours"> Jours</string>
    <string name="du"> Du</string>
    <string name="au"> Au</string>
    <string name="gerer_les_absences">Gérer les absences</string>
    <string name="mes_absences">Mes absences</string>
    <string name="calendrier_d_quipe">Calendrier d\'équipe</string>
    <string name="_18_02_2020">18/02/2020</string>
    <string name="_au">au</string>
    <string name="au_17_04_2020">au 17 04 2020</string>
    <string name="a_valider">À valider</string>
    <string name="valid_es">Validées</string>
    <string name="refus_es">Refusées</string>
    <string name="cong_pay">Congé Payé</string>
    <string name="r_cup_ration">Récupération</string>
    <string name="repos_compensateur">Repos Compensateur</string>
    <string name="repos_compensateur_remplacement">Repos Compensateur Remplacement</string>
    <string name="alphab_tique">Alphabétique</string>
    <string name="filtre">Filtre</string>
    <string name="date_d_ch_ance">Date d\'échéance</string>
    <string name="cong_s_pay_s">Congés payés</string>
    <string name="cong_s_sans_solde">Congés sans solde</string>
    <string name="historique_d_absences">Historique d\'absences</string>
    <string name="demandes_accept_es">Demandes acceptées</string>
    <string name="demandes_en_attente">Demandes en attente</string>
    <string name="demandes_refus_es">Demandes refusées</string>
    <string name="pas_d_absences_pour">Pas d\'absences pour</string>
    <string name="toutes_les_absences_appara_tront_ici">Toutes les absences apparaîtront ici</string>
    <string name="valider">Valider</string>
    <string name="refuser">Refuser</string>
    <string name="mes_activites">Mes activités</string>
    <string name="card">Lecteur de Carte </string>
    <string-array name="days">
        <item>@string/Lundi</item>
        <item>@string/Mardi</item>
        <item>@string/Mercredi</item>
        <item>@string/Jeudi</item>
        <item>@string/Vendredi</item>
        <item>@string/Samedi</item>
        <item>@string/Dimanche</item>
    </string-array>
    <string name="Cumul_Mensuel">Cumul Mensuel</string>
    <string name="Nombre_de_jours">Nombre de jours</string>
    <string name="Temps_de_service">Temps de service</string>
    <string name="Heure_nuit">Heure nuit</string>
    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="août">Août</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="décembre">Décembre</string>
    <string name="salari_s_pr_sents">Salariés Présents</string>
    <string name="salari_s_absents">Salariés Absents</string>
    <string name="demandes_d_absence">Demandes d\'absence</string>
    <string name="sp">SP</string>
    <string name="sa">SA</string>
    <string name="pas_de_demandes">Pas de demandes</string>
    <string name="d_absence">d\'absence</string>
    <string name="toutes_les_demandes_d_absence_appara_tront_ici">Toutes les demandes d\'absence apparaîtront ici</string>
    <string name="pas_de_salari_s">Pas de salariés</string>
    <string name="pr_sents">présents</string>
    <string name="absents">absents</string>
    <string name="tous_les_salari_s_absents_appara_tront_ici">Tous les salariés absents apparaîtront ici</string>
    <string name="mon_activit_de_la_journ_e">Mon activité de la journée</string>
    <string name="mensuel">Mensuel</string>
    <string name="hebdomadaire">Hebdomadaire</string>
    <string name="ouvrir">ouvrir</string>
    <string name="fermer">fermer</string>
    <string name="toolbar_and_header">toolbar_and_header</string>
    <string name="d_tails_demande">Détails Demande</string>
    <string name="d_tails_du_cong">Détails du congé</string>
    <string name="type_de_absence">Type d\'absence</string>
    <string name="commentaire">Commentaire</string>
    <string name="Loreum_ipsum_die_dolr_die_ipsum_loreum_die_dolt">Loreum ipsum die dolr die ipsum loreum die dolt</string>
    <string name="de">De</string>
    <string name="_15_01_2020">15/01/2020</string>
    <string name="Camera">Camera</string>
    <string name="Galerie">Galerie</string>
    <string name="PDF" translatable="false">PDF</string>
    <string name="Annuler">Annuler</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>
    <string name="Se_déconnecter">Se déconnecter</string>
    <string name="Deconnexion">Deconnexion</string>
    <string name="En_cliquant_sur_déconnexion_vous_allez_vous_déconnectez_de_votre_compte">En cliquant sur déconnexion vous allez vous déconnecter de votre compte</string>
    <string name="Envoyer">Envoyer</string>
    <string name="Cherchez_votre_destinataire">Cherchez votre destinataire</string>
    <string name="Trouvez_votre_destinataire">Trouvez votre destinataire</string>
    <string name="Recherche_Récente_">Recherche Récente :</string>
    <string name="Votre_dépense_a_été_ajouter_avec_succès">Votre dépense a été ajoutée  avec succès</string>
    <string name="ajouter_une_autre_dépense">ajouter une autre dépense</string>
    <string name="Confirmez_l_envoi_de_votre_demande">Confirmez l’envoi de votre demande</string>
    <string name="il_sera_impossible_de_la_modifier_après_l_enregistrement">* il sera impossible de la modifier après l’enregistrement</string>
    <string name="Email">Email</string>
    <string name="envoyer_une_copie">Envoyer une copie à</string>
    <string name="voulez_vous_enregistrer_votre_d_pense_avant_de_quitter">Voulez-vous enregistrer votre dépense avant de quitter ?</string>
    <string name="Cette_action_doit_vous_étres_demandée_par_un_collaborateur_de_Strada_Service">Cette action doit vous étres demandée par un collaborateur de Strada Service</string>
    <string name="Etes_vous_sur_de_vouloir_activer_cette_foncionnalité_">Etes-vous sur de vouloir activer cette foncionnalité ?</string>
    <string name="Activer">Activer</string>
</resources>