<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_calendar"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sfpro_display_light"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/Confirmez_l_envoi_de_votre_demande"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sf_ui_display_bold"
            android:lineSpacingExtra="5dp"
            android:text="@string/envoyer_une_copie"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_sub_menu_edit"
            android:fontFamily="@font/sfpro_display_light"
            android:hint="@string/Email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sfpro_display_light"
            android:lineSpacingExtra="5dp"
            android:text="@string/il_sera_impossible_de_la_modifier_après_l_enregistrement"
            android:textColor="#FF5F5F"
            android:textSize="16sp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnnuler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:fontFamily="@font/sfro_display_regular"
                android:text="@string/Annuler"
                android:textColor="@color/colorAccent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEnvoyer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_blue"
                android:fontFamily="@font/sf_ui_display_bold"
                android:text="@string/Envoyer"
                android:textColor="@android:color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>