<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rectangle_white_radius"
        android:layout_marginBottom="5dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/Camera"
            android:gravity="center"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            android:fontFamily="@font/sfpro_display_light"
            android:includeFontPadding="false"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCalerie"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/Galerie"
            android:gravity="center"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            android:fontFamily="@font/sfpro_display_light"
            android:includeFontPadding="false"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnPdf"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/PDF"
            android:gravity="center"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            android:fontFamily="@font/sfpro_display_light"
            android:includeFontPadding="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAnnuler"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Annuler"
        android:gravity="center"
        android:textColor="@color/light_black"
        android:textSize="19sp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:background="@drawable/bg_round_dialog"
        android:includeFontPadding="false"
        />
</androidx.appcompat.widget.LinearLayoutCompat>