<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_calendar"
        android:padding="20dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Se_déconnecter"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:fontFamily="@font/sf_ui_display_bold"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/En_cliquant_sur_déconnexion_vous_allez_vous_déconnectez_de_votre_compte"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:fontFamily="@font/sfpro_display_light"
            android:lineSpacingExtra="5dp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnnuler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_cancel"
                android:fontFamily="@font/sfro_display_regular"
                android:text="@string/Annuler"
                android:textColor="@color/colorAccent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeconnexion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_widget_blue"
                android:fontFamily="@font/sf_ui_display_bold"
                android:text="@string/Deconnexion"
                android:textColor="@android:color/white"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>