<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="20dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cherchez_votre_destinataire"
            android:gravity="center"
            android:fontFamily="@font/sf_ui_display_semibold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rectangle_grey_radius"
            android:hint="@string/Trouvez_votre_destinataire"
            android:textSize="17sp"
            android:drawableStart="@drawable/ic_searsh"
            android:layout_marginBottom="15dp"
            android:textColorHint="#6E788D"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Recherche_Récente_"
            android:fontFamily="@font/sfpro_display_light"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>