<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/bg_calendar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/Cette_action_doit_vous_étres_demandée_par_un_collaborateur_de_Strada_Service"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:background="@drawable/bg_header_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/msgInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Etes_vous_sur_de_vouloir_activer_cette_foncionnalité_"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgInfo">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnnuler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_cancel"
                android:fontFamily="@font/sfro_display_regular"
                android:text="@string/annuler"
                android:textColor="@color/colorAccent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnActiver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_widget_blue"
                android:fontFamily="@font/sf_ui_display_bold"
                android:text="@string/Activer"
                android:textColor="@android:color/white"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>