<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="@drawable/bg_calendar"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/Votre_dépense_a_été_ajouter_avec_succès"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_sucess_png" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAjouterUneAutreDepense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_widget_blue"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/ajouter_une_autre_dépense"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTerminer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_cancel"
            android:fontFamily="@font/sfro_display_regular"
            android:text="@string/terminer"
            android:textColor="@color/colorAccent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>